# flowbite-rsx

./: Cargo.toml  Dioxus.toml  README.md
src/: main.rs
src/components/: accordion.rs  alerts.rs  buttons.rs  mod.rs
