[package]
name = "flowbite-rsx"
version = "0.1.0"
authors = ["Abhijit Roy <dalvath3700@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "3f8c32d1ff638eb8c02afcb3bfd971b7d9e117ed", features = ["web", "router"] }
dioxus-logger = "0.5.1"
manganis = "0.2.2"